--- a/dev/misc/3-Tutorials/complete-install/ng/the_last_stand/src/styles/App.css
+++ b/dev/misc/3-Tutorials/complete-install/ng/the_last_stand/src/styles/App.css
@@ -1,4 +1,5 @@
-#root {
+/* ---------- Vite Blank version ---------- */
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +40,5 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
+/* ---------------------------------------- */
