--- a/C61/sprint1/doc/the-last-stand-v2/src/client/styles/index.css
+++ b/C61/sprint1/doc/the-last-stand-v2/src/client/styles/index.css
@@ -1,5 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Orbitron:wght@400;500;600;700;800;900&family=Tilt+Neon&display=swap');
+@font-face {
+  font-family: Cyberpunks;
+  src: url(../fonts/cyberpunks/Cyberpunks.ttf);
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Tilt Neon', cursive;
+  font-family: 'Orbitron', sans-serif;
+  font-family: 'Audiowide', cursive;
   line-height: 1.5;
   font-weight: 400;
 
