Trying to make tailwind work

--- a/C61/sprint1/doc/the-last-stand/src/client/styles/index.css
+++ b/C61/sprint1/doc/the-last-stand/src/client/styles/index.css
@@ -4,6 +4,7 @@
   src: url(../fonts/cyberpunks/Cyberpunks.ttf);
 }
 
+@import './tailwind.config.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
