--- a/dev/the-last-stand/src/client/styles/index.css
+++ b/dev/the-last-stand/src/client/styles/index.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Scrollbar personnalisée adaptée de https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_custom_scrollbar2 */
+/* width */
+::-webkit-scrollbar {
+  width: 30px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px purple;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: purple;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b300b3;
+}
+
+/* For other browsers */
+.scrollbar-custom {
+  scrollbar-color: purple transparent;
+  scrollbar-width: 30px;
+}
